--- a/js/widgets/package.json
+++ b/js/widgets/package.json
@@ -10,18 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-dropzone": "^3.12.1",
-    "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "superagent": "^3.5.0",
-    "webpack": "^1.14.0"
+    "babel-core": "^6.1.4",
+    "babel-loader": "^6.1.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.1.4",
+    "react": "^0.14.2",
+    "react-addons-css-transition-group": "^0.14.6",
+    "react-dom": "^0.14.2",
+    "webpack": "^2.2.1"
   }
 }
